2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove unused code in Autoconf macros.
	* m4/ioctl.m4 (CL_IOCTL): Don't define IOCTL_REQUEST_T, IOCTL_DOTS,
	IOCTL_ARGUMENT_T.
	* configure.in: Update comment.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume ANSI C or C++ in Autoconf macros.
	* m4/as-underscore.m4: Use ANSI C prototypes.
	* m4/signal.m4: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient systems with old waitpid declaration.
	* unix.d (waitpid, wait2): Use pid_t instead of PID_T.
	* unixaux.d (wait2): Likewise.
	* configure.in: Don't invoke CL_WAITPID.
	* m4/waitpid.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient systems with hidden ELOOP macro.
	* pathname.d (realpath, get_path_info): Use ELOOP, not ELOOP_VALUE.
	* configure.in: Don't invoke CL_ELOOP.
	* m4/eloop.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient Cygwin bug (not known to gnulib).
	* pathname.d (directory_search_scandir): Use closedir, not CLOSEDIR.
	* unix.d (CLOSEDIR): Remove macro.
	* configure.in: Don't invoke CL_CLOSEDIR.
	* m4/closedir.m4: Remove file.
	* m4/filecharset.m4: Update.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-04  Bruno Haible  <bruno@clisp.org>

	maint: Modernize code style of Autoconf macros.
	* m4/*.m4: Use modern indentation and quoting style.
	* m4/filecharset.m4: Fix compilation failure with pre-C99 compilers
	(regression from 2008-05-27).
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-10-03  Bruno Haible  <bruno@clisp.org>

	Remove unused autoconf test.
	* src/configure.in: Don't invoke CL_SHM_RMID.
	* src/m4/shm-rmid.m4: Remove file.